--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@types/node": "20.5.6",
     "@types/react": "^18.2.21",
     "@types/react-dom": "18.2.7",
@@ -17,6 +18,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-spring": "^9.7.3",
     "typescript": "5.2.2"
   },
